; ModuleID = '/home/carl/AnghaBench/esp-idf/components/sdmmc/extr_sdmmc_sd.c_sdmmc_init_sd_wait_data_ready.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/sdmmc/extr_sdmmc_sd.c_sdmmc_init_sd_wait_data_ready.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MMC_R1_READY_FOR_DATA = common dso_local global i32 0, align 4
@ESP_OK = common dso_local global i64 0, align 8
@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [38 x i8] c"waiting for card to become ready (%d)\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @sdmmc_init_sd_wait_data_ready(i32* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i32 0, i32* %4, align 4
  store i32 0, i32* %5, align 4
  br label %7

7:                                                ; preds = %36, %1
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @host_is_spi(i32* %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %17, label %11

11:                                               ; preds = %7
  %12 = load i32, i32* %4, align 4
  %13 = load i32, i32* @MMC_R1_READY_FOR_DATA, align 4
  %14 = and i32 %12, %13
  %15 = icmp ne i32 %14, 0
  %16 = xor i1 %15, true
  br label %17

17:                                               ; preds = %11, %7
  %18 = phi i1 [ false, %7 ], [ %16, %11 ]
  br i1 %18, label %19, label %37

19:                                               ; preds = %17
  %20 = load i32*, i32** %3, align 8
  %21 = call i64 @sdmmc_send_cmd_send_status(i32* %20, i32* %4)
  store i64 %21, i64* %6, align 8
  %22 = load i64, i64* %6, align 8
  %23 = load i64, i64* @ESP_OK, align 8
  %24 = icmp ne i64 %22, %23
  br i1 %24, label %25, label %27

25:                                               ; preds = %19
  %26 = load i64, i64* %6, align 8
  store i64 %26, i64* %2, align 8
  br label %39

27:                                               ; preds = %19
  %28 = load i32, i32* %5, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* %5, align 4
  %30 = srem i32 %29, 16
  %31 = icmp eq i32 %30, 0
  br i1 %31, label %32, label %36

32:                                               ; preds = %27
  %33 = load i32, i32* @TAG, align 4
  %34 = load i32, i32* %5, align 4
  %35 = call i32 @ESP_LOGV(i32 %33, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0), i32 %34)
  br label %36

36:                                               ; preds = %32, %27
  br label %7

37:                                               ; preds = %17
  %38 = load i64, i64* @ESP_OK, align 8
  store i64 %38, i64* %2, align 8
  br label %39

39:                                               ; preds = %37, %25
  %40 = load i64, i64* %2, align 8
  ret i64 %40
}

declare dso_local i32 @host_is_spi(i32*) #1

declare dso_local i64 @sdmmc_send_cmd_send_status(i32*, i32*) #1

declare dso_local i32 @ESP_LOGV(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
